--- a/TesteGearHost/WebGearHost/Views/Shared/_Layout.cshtml
+++ b/TesteGearHost/WebGearHost/Views/Shared/_Layout.cshtml
@@ -22,9 +22,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Início", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
+                    <li>@Html.ActionLink(WebGearHost.Resources.Biblioteca.Início, "Index", "Home")</li>
+                    <li>@Html.ActionLink(WebGearHost.Resources.Biblioteca.Sobre, "About", "Home")</li>
+                    <li>@Html.ActionLink(WebGearHost.Resources.Biblioteca.Contato, "Contact", "Home")</li>
+                    <li>@Html.ActionLink(WebGearHost.Resources.Biblioteca.Idioma, "Index", "Idioma")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
